# Tao-Shanghan-Harness

./: README.md
backend/: .gitignore  README.md  pyproject.toml
backend/data/shanghan/: tool_specs.json
backend/docs/: AGENT_ROADMAP.md  HARNESS.md  LLM_AGENT.md  MATURITY.md  PAPER_FIGURES.md  PLATFORM.md  PROTOCOL.md  REJECTION_CASES.md  TEST_REPORT.md  TRACE.md  WEB_UI.md
backend/hermes_shanghan/: __init__.py  _version.py  cli.py  config.py  domains.py  health.py  lexicon.py  orchestrator.py  safety.py  schemas.py  textutil.py
backend/hermes_shanghan/agent/: __init__.py  agent.py  citation_guard.py  complex_agent.py  consensus.py  evidence_binder.py  hypothesis.py  multi_agent.py  planner.py  research_loop.py  session.py  tools.py
backend/hermes_shanghan/apps/: bianzheng.py  commentary_atlas.py  differential_audit.py  doctor.py  dosimetry.py  herbal.py  patient.py  quiz.py  research.py  teaching.py
backend/notebooks/: Hermes_Shanghanlun_Colab.ipynb
backend/tests/: test_agent_architecture.py  test_agent_enhancements.py  test_apps_and_rag.py  test_atlas_dosimetry.py  test_bianzheng.py  test_classics.py  test_console.py  test_corpus.py  test_deep_research.py  test_docs_sync.py  test_entities.py  test_eval.py  test_evidence_integrity.py  test_governance.py  test_hardening.py  test_harness.py  test_invariants.py  test_library.py  test_llm_agent.py  test_model_layers.py  test_new_tools.py  test_notebook.py  test_paper_figs.py  test_paper_llm.py  test_provenance.py  test_refinements.py  test_review.py  test_server.py  test_trace.py  test_v1_api.py
(+1128 files in other folders)
